--- a/datepicker.html
+++ b/datepicker.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pa">
+<html>
     <head>
        
-        <title>Afghani Calendar</title>
+        <title>Afghani Datepicker</title>
         <link href="style.css" rel="stylesheet">
         <meta charset="utf-8"/>
         <style>
