multi language labels

--- a/datepicker.html
+++ b/datepicker.html
@@ -77,12 +77,13 @@
         </span>
         <h2 style="margin-top: 1em;">Add a <strong>settings</strong> object in order to change the default settings</h2>
         
-<pre class="tag" style="width: 20%;">
+<pre class="tag" style="width: 30%;">
 &lt;script&gt;
     settings = {
-        format: "dd/mm/yyyy",
-        dateSeperator: "-",
-        autoClose: true
+        format: 'dd/mm/yyyy',
+        dateSeparator: '-',
+        autoClose: true,
+        labelLanguage: 'dari' // 'pashto','farsi'
     }
 &lt;/script&gt;
 </pre>
@@ -90,8 +91,9 @@
         <script>
             settings = {
                 format: "dd/mm/yyyy",
-                dateSeperator: "-",
-                autoClose: true
+                dateSeparator: "-",
+                autoClose: true,
+                labelLanguage: 'dari'
             }
         </script>
     </body>
