--- a/datepicker.html
+++ b/datepicker.html
@@ -32,7 +32,7 @@
     <body>
         <header>
             <h1 style="margin-bottom: .5em;">Date pickers: </h1>
-            <h2 style="margin-top: 1em;">Include <strong>sytle.css</strong> inside tag head</h2>
+            <h2 style="margin-top: 1em;">Include <strong>style.css</strong> inside tag head</h2>
             <span class="tag">
                 &lt;head&gt;
                 &lt;link href="style.css" rel="stylesheet"&gt;
