--- a/datepicker.html
+++ b/datepicker.html
@@ -87,7 +87,7 @@
     }
 &lt;/script&gt;
 </pre>
-        <script src="index.min.js"></script>
+        <script src="index.js"></script>
         <script>
             settings = {
                 format: "dd/mm/yyyy",
